Fix div overflow issues. Fix layout.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,6 +65,7 @@ header,footer{
 
 .signUp{
     width:100px;
+    align-self:center;
 }
 img{
     height:100px;
@@ -77,7 +78,7 @@ img{
 .pictures{
     display: flex;
     width: 75%;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .text{
@@ -136,20 +137,31 @@ footer{
     width:50px;
     border: none;
 }
-.callToAction{
+/*.callToAction{
     display:flex;
-    flex:1 auto 0;
+    flex:1 auto 1;
     justify-content: center;
     align-items: center;
-    overflow:hidden;
+    overflow:scroll;
     white-space: nowrap;
-}
+}*/
+
+.callToAction {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 75%;
+    max-width: 100%;
+    margin: 0 auto; /* Center the container */
+    border: 1px solid #ccc; /* Optional: Add a border for visualization */
+    box-sizing: border-box; /* Include padding and border in the total width */
+  }
 
 .callText{
     display:flex;
     justify-content: center;
     flex-direction: column;
-    margin-right:250px;
+    margin-right:25%;
     margin-left:50px;
 }
 
